--- a/FinalEF/FinalEF/App.config
+++ b/FinalEF/FinalEF/App.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<connectionStrings>
-		<add name ="Products" connectionString="Data Source=10.155.200.101;TrustServerCertificate=true;Initial Catalog=Mannion;User ID=Mannion;Password=ITPA2024!"/>
+		<add name ="Products" connectionString="Data Source=;TrustServerCertificate=true;Initial Catalog=;User ID=;Password="/>
 	</connectionStrings>
 </configuration>
